[project]
name = "02-fakedatageneration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=35.2.0",
    "mysqlclient>=2.2.7",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.0",
    "toml>=0.10.2",
]
